fix tag spacing

--- a/app/assets/stylesheets/custom/components.css
+++ b/app/assets/stylesheets/custom/components.css
@@ -59,7 +59,7 @@
       .tag-rejected,
       .tag-accepted
     ) {
-    @apply border-primary-200 bg-primary-100/80 pr-1.5 text-primary-600;
+    @apply border-primary-200 bg-primary-100/80 has-[svg]:pr-1.5 text-primary-600;
 
     & > svg {
       @apply size-4 cursor-pointer rounded-full p-0.5 text-primary-600 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
@@ -74,7 +74,7 @@
     }
 
     &.tag-selected.tag-filter {
-      @apply pr-1.5;
+      @apply has-[svg]:pr-1.5;
     }
 
     &.tag-filter {
@@ -84,7 +84,7 @@
     &.tag-selected,
     &:not(.tag-filter) {
       & > svg {
-        @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+        @apply size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
       }
     }
   }
@@ -96,7 +96,7 @@
     }
 
     &.tag-selected.tag-filter {
-      @apply pr-1.5;
+      @apply has-[svg]:pr-1.5;
     }
 
     &.tag-filter {
@@ -106,7 +106,7 @@
     &.tag-selected,
     &:not(.tag-filter) {
       & > svg {
-        @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+        @apply size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
       }
     }
   }
@@ -118,7 +118,7 @@
     }
 
     &.tag-selected.tag-filter {
-      @apply pr-1.5;
+      @apply has-[svg]:pr-1.5;
     }
 
     &.tag-filter {
@@ -128,7 +128,7 @@
     &.tag-selected,
     &:not(.tag-filter) {
       & > svg {
-        @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+        @apply size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
       }
     }
   }
@@ -140,7 +140,7 @@
     }
 
     &.tag-selected.tag-filter {
-      @apply pr-1.5;
+      @apply has-[svg]:pr-1.5;
     }
 
     &.tag-filter {
@@ -150,7 +150,7 @@
     &.tag-selected,
     &:not(.tag-filter) {
       & > svg {
-        @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+        @apply size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
       }
     }
   }
@@ -162,7 +162,7 @@
     }
 
     &.tag-selected.tag-filter {
-      @apply pr-1.5;
+      @apply has-[svg]:pr-1.5;
     }
 
     &.tag-filter {
@@ -172,7 +172,7 @@
     &.tag-selected,
     &:not(.tag-filter) {
       & > svg {
-        @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+        @apply size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
       }
     }
   }
@@ -184,7 +184,7 @@
     }
 
     &.tag-selected.tag-filter {
-      @apply pr-1.5;
+      @apply has-[svg]:pr-1.5;
     }
 
     &.tag-filter {
@@ -194,7 +194,7 @@
     &.tag-selected,
     &:not(.tag-filter) {
       & > svg {
-        @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+        @apply size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
       }
     }
   }
@@ -206,7 +206,7 @@
     }
 
     &.tag-selected.tag-filter {
-      @apply pr-1.5;
+      @apply has-[svg]:pr-1.5;
     }
 
     &.tag-filter {
@@ -216,7 +216,7 @@
     &.tag-selected,
     &:not(.tag-filter) {
       & > svg {
-        @apply ml-1.75 size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
+        @apply size-4 cursor-pointer rounded-full p-0.5 transition-all duration-150 in-[.tag-selected:hover]:bg-rose-200/70 in-[.tag-selected:hover]:text-rose-600;
       }
     }
   }
